Basic Homepage Styling

--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -1,4 +1,33 @@
-<p>
-  <%= t('.copyright', :year => Time.now.year,
-                      :site_name => Refinery::Core.site_name) %>
-</p>
+<div id ="contact-info" class="row">
+  <div class="large-12 columns">
+    <ul>
+      <li>1-800-102-2655</li>
+      <li>Contact Us</li>
+      <li>Twitter</li>
+      <li>FaceBook</li>
+      <li>RSS Feed List</li>
+    </ul>
+  </div>
+</div>
+
+<div class="clear">
+  
+</div>
+
+<div id ="footer-nav" class="row">
+  <div class="large-12 columns">
+    <ul>
+      <li>SiteMap</li>
+      <li>Privacy Policy</li>
+    </ul>
+  </div>
+</div>
+
+<div id="copyright" class="row">
+  <div class="large-12 columns">
+    <p>
+      <%= t('.copyright', :year => Time.now.year,
+                          :site_name => Refinery::Core.site_name) %>
+    </p>
+  </div>
+</div>
