--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -1,1 +1,20 @@
 <%= render '/refinery/content_page', :hide_sections => :body_content_title %>
+<div class="row">
+  <div class="large-12 columns text-center">
+    <img src="http://placehold.it/960x300">
+  </div>
+</div>
+<div class="row">
+  <div class="large-12 columns text-center">
+    <img src="http://placehold.it/960x300">
+  </div>
+</div>
+
+<div class="row">
+  <div class="large-6 columns text-center">
+    <img src="http://placehold.it/430x300">
+  </div>
+  <div class="large-6 columns text-center">
+    <img src="http://placehold.it/430x300">
+  </div>
+</div>
