Added Company pages

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -21,9 +21,9 @@ ul {
   padding-bottom: 20px;
 }
 #contact-info ul{
-list-style:none; 
-position:relative;
-left:50%;
+  list-style:none; 
+  position:relative;
+  left:50%;
 }
 #contact-info li{
   float:left;
@@ -49,3 +49,25 @@ left:50%;
   padding-left: 15px;
   padding-right: 15px;
 }/* ie needs position:relative here*/
+
+#body_content_title {
+  padding-bottom: 30px;
+}
+
+#title{
+  height: 25px;
+}
+#sub-nav li{
+  float:left;
+  position:relative;
+  padding-left: 15px;
+  padding-right: 15px;
+}/* ie needs position:relative here*/
+
+#body {
+  float: left;
+}
+#side_body {
+  float:right;
+  position:relative;
+}
