--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -13,7 +13,7 @@
     <ul class="right">
       <li><a href="#">Brands</a></li>
       <li class="divider"></li>
-      <li><a href="#">Company</a></li>
+      <li><a href="/company/our-story">Company</a></li>
       <li class="divider"></li>
       <li><a href="#">Franchise</a></li>
       <li class="divider"></li>
