--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -2,9 +2,9 @@
   <div class="large-12 columns">
     <ul>
       <li>1-800-102-2655</li>
-      <li>Contact Us</li>
-      <li>Twitter</li>
-      <li>FaceBook</li>
+      <li><a href="/contact-us">Contact Us</a></li>
+      <li><a href="https://twitter.com/JustBooksCLC">Twitter</a></li>
+      <li><a href="https://www.facebook.com/JustBooksCLC">FaceBook</a></li>
       <li>RSS Feed List</li>
     </ul>
   </div>
@@ -18,7 +18,7 @@
   <div class="large-12 columns">
     <ul>
       <li>SiteMap</li>
-      <li>Privacy Policy</li>
+      <li><a href="/privacy-policy">Privacy Policy</a></li>
     </ul>
   </div>
 </div>
