--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -17,7 +17,7 @@
       <li class="divider"></li>
       <li><a href="#">Franchise</a></li>
       <li class="divider"></li>
-      <li><a href="#">Blogs</a></li>
+      <li><a href="/blogs">Blogs</a></li>
       <li class="divider"></li>
       <li><a href="#">Press</a></li>
       <li class="divider"></li>
